# project-template-v1

./: .pre-commit-config.yaml  README.md  cookiecutter.json
{{ cookiecutter.repo_name }}/: .dockerignore  .env  README.md  pyproject.toml
{{ cookiecutter.repo_name }}/.devcontainer/: devcontainer.json  post_create.sh
{{ cookiecutter.repo_name }}/.github/: dependabot.yaml
{{ cookiecutter.repo_name }}/.github/workflows/: data-tests.yaml  deploy_docs.yaml  linting.yaml  pre-commit-update.yaml  tests.yaml
{{ cookiecutter.repo_name }}/configs/: config_dev.yaml  config_prod.yaml  config_test.yaml
